# robot

./: .gitignore  main.py  pyproject.toml  tcp_camera_server.py
app/: README.md  settings.gradle.kts
app/app/: build.gradle.kts
app/app/src/androidTest/java/com/example/robotapp/: ExampleInstrumentedTest.kt
app/app/src/main/: AndroidManifest.xml
app/app/src/main/java/com/example/robotapp/: MainActivity.kt
app/app/src/main/java/com/example/robotapp/ui/theme/: Color.kt  Theme.kt  Type.kt
app/app/src/main/res/values/: strings.xml  themes.xml
app/app/src/test/java/com/example/robotapp/: ExampleUnitTest.kt
app/gradle/wrapper/: gradle-wrapper.properties
