[project]
name = "robot"
version = "0.1.0"
description = "机器人数据采集系统"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "opencv-python>=4.12.0.88",
    "PyQt5>=5.15.9",
    "pyqt5-tools>=5.15.9.3.3",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true